--- a/composer.json
+++ b/composer.json
@@ -82,6 +82,8 @@
     "satis2020/transfer-claim-to-targeted-institution": "^1.0",
     "satis2020/transfer-claim-to-unit": "^1.0",
     "satis2020/type-unit": "^1.0",
+    "satis2020/uemoa-reports-any-institution": "^1.0",
+    "satis2020/uemoa-reports-my-institution": "^1.0",
     "satis2020/update-claim-against-any-institution": "^1.0",
     "satis2020/update-claim-against-my-institution": "^1.0",
     "satis2020/update-claim-without-client": "^1.0",
