--- a/composer.json
+++ b/composer.json
@@ -83,6 +83,7 @@
     "satis2020/type-unit": "^1.0",
     "satis2020/uemoa-reports-any-institution": "^1.0",
     "satis2020/uemoa-reports-my-institution": "^1.0",
+    "satis2020/uemoa-reports-without-client": "^1.0",
     "satis2020/update-claim-against-any-institution": "^1.0",
     "satis2020/update-claim-against-my-institution": "^1.0",
     "satis2020/update-claim-without-client": "^1.0",
@@ -663,6 +664,13 @@
     {
       "type": "path",
       "url": "modules/uemoa-reports-my-institution/",
+      "options": {
+        "symlink": true
+      }
+    },
+    {
+      "type": "path",
+      "url": "modules/uemoa-reports-without-client/",
       "options": {
         "symlink": true
       }
