--- a/.env.pro.example
+++ b/.env.pro.example
@@ -1,17 +1,16 @@
-APP_NAME='SATIS MACRO'
+APP_NAME="SATIS PRO"
 APP_ENV=local
 APP_KEY=base64:S4nB3LAIZzUkh/H5CJRj4ufP5ZBoiRbY65N6CzAFxo0=
 APP_DEBUG=true
 APP_URL=http://127.0.0.1:8000
-APP_NATURE=HUB
-APP_YEAR_INSTALLATION=2020
+APP_NATURE=PRO
+APP_YEAR_INSTALLATION=2021
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-# DB_DATABASE=devsatismacro
-DB_DATABASE=installsatis
+DB_DATABASE=satis
 DB_USERNAME=root
 DB_PASSWORD=
 
