--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 /node_modules
 
 /public/hot
-/public/storage/
+/public/storage/*
 !/public/storage/components/
 !/public/storage/excels/
 /storage/*.key
