--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
 /node_modules
 
-/public/hot
 /public/storage/*
-!/public/storage/components/
-!/public/storage/excels/
+!/public/storage/components
+!/public/storage/excels
+/public/hot
+
 /storage/*.key
 
 /vendor
