--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,12 @@
 /node_modules
 
-/public/storage/*
-!/public/storage/components
-!/public/storage/excels
+!public/
+public/*
+!public/storage/
+public/storage/*
+!public/storage/components/
+!public/storage/excels/
+
 /public/hot
 
 /storage/*.key
