redefine untracked files

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,8 @@
 /node_modules
 
-!public/
-
-public/*
-
-!public/storage/
-
-public/storage/*
-
-!public/storage/components/
+/public/storage/*
+!/public/storage/components/
+!/public/storage/excels/
 
 /public/hot
 
