--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 /node_modules
 
-/storage/app/public/*
-!/storage/app/public/components/
-!/storage/app/public/excels/
+#/storage/app/public/*
+#!/storage/app/public/components/
+#!/storage/app/public/excels/
 
 /public/hot
 
