--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,7 @@ composer.lock
 package-lock.json
 package.json
 /tests
+
+/storage/app/public/*
+!/storage/app/public/excels
+!/storage/app/public/components-example
