--- a/.env.pro.example
+++ b/.env.pro.example
@@ -1,22 +1,24 @@
-APP_NAME="SATIS PRO"
+APP_NAME='SATIS MACRO'
 APP_ENV=local
 APP_KEY=base64:S4nB3LAIZzUkh/H5CJRj4ufP5ZBoiRbY65N6CzAFxo0=
 APP_DEBUG=true
-APP_URL=http://127.0.0.1:8000
-APP_NATURE=PRO
+APP_URL=http://satis-macro.local
+APP_NATURE=MACRO
 APP_YEAR_INSTALLATION=2021
+URL_FORGOT_PASSWORD_CLIENT =http://satis-macro.local/forgot-password
 LOG_CHANNEL=stack
 
+
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=satis
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=satismacro
+DB_USERNAME=dmd-christian
+DB_PASSWORD=Dmd@2019
 
 BROADCAST_DRIVER=pusher
 CACHE_DRIVER=file
-QUEUE_CONNECTION=sync
+QUEUE_CONNECTION=database
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
@@ -27,10 +29,10 @@ REDIS_PORT=6379
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.mailtrap.io
 MAIL_PORT=2525
-MAIL_USERNAME=812f274dda314f
-MAIL_PASSWORD=e2dd6cecff42fc
+MAIL_USERNAME=35f493eb45f43f
+MAIL_PASSWORD=42bf4249373d12
 MAIL_ENCRYPTION=tls
-MAIL_FROM_ADDRESS=ulrich@dmdconsult.com
+MAIL_FROM_ADDRESS=christian@dmdconsult.com
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
@@ -46,4 +48,4 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-LARAVEL_WEBSOCKETS_PORT=6001
+LARAVEL_WEBSOCKETS_PORT=6003
