--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME='SATIS MACRO'
+APP_NAME='SATIS'
 APP_ENV=local
 APP_KEY=base64:S4nB3LAIZzUkh/H5CJRj4ufP5ZBoiRbY65N6CzAFxo0=
 APP_DEBUG=true
@@ -10,14 +10,13 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-# DB_DATABASE=devsatismacro
-DB_DATABASE=installsatis
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=satis
+DB_USERNAME=satis_user
+DB_PASSWORD=Azerty@123
 
 BROADCAST_DRIVER=pusher
 CACHE_DRIVER=file
-QUEUE_CONNECTION=sync
+QUEUE_CONNECTION=database
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
@@ -47,4 +46,6 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
+LARAVEL_WEBSOCKETS_HOST=http://127.0.0.1:8000
 LARAVEL_WEBSOCKETS_PORT=6001
+LARAVEL_WEBSOCKETS_SCHEME=http
