--- a/.env.example
+++ b/.env.example
@@ -49,3 +49,7 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 LARAVEL_WEBSOCKETS_HOST=http://127.0.0.1:8000
 LARAVEL_WEBSOCKETS_PORT=6001
 LARAVEL_WEBSOCKETS_SCHEME=http
+
+API_SUBSCRIPTION_INCOMING_EMAIL=http://incoming-mail-service.local/api/subscribe
+EMAIL_CLAIM_CONFIGURATION_CLIENT_ID=3
+EMAIL_CLAIM_CONFIGURATION_CLIENT_SECRET=X4cRipgGU5Ch2qqpdpMx4DRW1mfVgza0o0gsf2yA
