--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
     "satis2020/account-type": "^1.0",
     "satis2020/active-pilot": "^1.0",
     "satis2020/any-claim-archived": "^1.0",
+    "satis2020/any-claim-incoming-by-email": "^1.0",
     "satis2020/any-institution": "^1.0",
     "satis2020/any-institution-type-role": "^1.0",
     "satis2020/any-institution-unit": "^1.0",
@@ -47,6 +48,7 @@
     "satis2020/monitoring-claim-any-institution": "^1.0",
     "satis2020/monitoring-claim-my-institution": "^1.0",
     "satis2020/my-claim-archived": "^1.0",
+    "satis2020/my-claim-incoming-by-email": "^1.0",
     "satis2020/my-institution": "^1.0",
     "satis2020/my-institution-type-role": "^1.0",
     "satis2020/my-institution-unit": "^1.0",
@@ -88,7 +90,8 @@
     "satis2020/update-claim-against-my-institution": "^1.0",
     "satis2020/update-claim-without-client": "^1.0",
     "satis2020/users-package": "^1.0",
-    "satis2020/without-link-with-institution-unit": "^1.0"
+    "satis2020/without-link-with-institution-unit": "^1.0",
+    "ext-fileinfo": "*"
   },
   "require-dev": {
     "facade/ignition": "^2.0",
@@ -671,6 +674,20 @@
     {
       "type": "path",
       "url": "modules/uemoa-reports-without-client/",
+      "options": {
+        "symlink": true
+      }
+    },
+    {
+      "type": "path",
+      "url": "modules/any-claim-incoming-by-email/",
+      "options": {
+        "symlink": true
+      }
+    },
+    {
+      "type": "path",
+      "url": "modules/my-claim-incoming-by-email/",
       "options": {
         "symlink": true
       }
