--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
   "license": "MIT",
   "require": {
     "php": "^7.2.5",
+    "ext-fileinfo": "*",
     "ext-json": "*",
     "doctrine/dbal": "^2.10",
     "fideloper/proxy": "^4.2",
@@ -89,9 +90,9 @@
     "satis2020/update-claim-against-any-institution": "^1.0",
     "satis2020/update-claim-against-my-institution": "^1.0",
     "satis2020/update-claim-without-client": "^1.0",
+    "satis2020/useful-data-for-backoffice": "^1.0",
     "satis2020/users-package": "^1.0",
-    "satis2020/without-link-with-institution-unit": "^1.0",
-    "ext-fileinfo": "*"
+    "satis2020/without-link-with-institution-unit": "^1.0"
   },
   "require-dev": {
     "facade/ignition": "^2.0",
@@ -688,6 +689,13 @@
     {
       "type": "path",
       "url": "modules/my-claim-incoming-by-email/",
+      "options": {
+        "symlink": true
+      }
+    },
+    {
+      "type": "path",
+      "url": "modules/useful-data-for-backoffice/",
       "options": {
         "symlink": true
       }
