--- a/composer.json
+++ b/composer.json
@@ -91,6 +91,7 @@
     "satis2020/update-claim-against-my-institution": "^1.0",
     "satis2020/update-claim-without-client": "^1.0",
     "satis2020/useful-data-for-backoffice": "^1.0",
+    "satis2020/useful-data-plugin-wordpress": "^1.0",
     "satis2020/users-package": "^1.0",
     "satis2020/without-link-with-institution-unit": "^1.0"
   },
@@ -696,6 +697,13 @@
     {
       "type": "path",
       "url": "modules/useful-data-for-backoffice/",
+      "options": {
+        "symlink": true
+      }
+    },
+    {
+      "type": "path",
+      "url": "modules/useful-data-plugin-wordpress/",
       "options": {
         "symlink": true
       }
