--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
     "laravel/tinker": "^2.0",
     "satis2020/account-type": "^1.0",
     "satis2020/active-pilot": "^1.0",
+    "satis2020/activity-log": "^1.0",
     "satis2020/any-claim-archived": "^1.0",
     "satis2020/any-claim-incoming-by-email": "^1.0",
     "satis2020/any-institution": "^1.0",
@@ -720,6 +721,13 @@
     {
       "type": "path",
       "url": "modules/auth-config/",
+      "options": {
+        "symlink": true
+      }
+    },
+    {
+      "type": "path",
+      "url": "modules/activity-log/",
       "options": {
         "symlink": true
       }
