allow only one session per user

--- a/modules/services-package/composer.json
+++ b/modules/services-package/composer.json
@@ -27,7 +27,8 @@
     "extra": {
         "laravel": {
             "providers": [
-                "Satis2020\\ServicePackage\\Providers\\ServicePackageServiceProvider"
+                "Satis2020\\ServicePackage\\Providers\\ServicePackageServiceProvider",
+                "Satis2020\\ServicePackage\\Providers\\EventServiceProvider"
             ]
         }
     }
