add orange sms api && create command to test sms sending

--- a/modules/external-dependencies-package/composer.json
+++ b/modules/external-dependencies-package/composer.json
@@ -23,7 +23,8 @@
         "maatwebsite/excel": "^3.1",
         "barryvdh/laravel-dompdf": "^0.8",
         "beyondcode/laravel-websockets": "^1.4",
-        "pusher/pusher-php-server": "^4.1"
+        "pusher/pusher-php-server": "^4.1",
+        "nategood/httpful": "*"
     },
     "require-dev": {
     },
