--- a/modules/auth-config/composer.json
+++ b/modules/auth-config/composer.json
@@ -30,7 +30,7 @@
     "extra": {
         "laravel": {
             "providers": [
-                "Satis2020\\AuthConfig\\Providers\\AuthConfigServiceProvider"
+              "NotificationProofServiceProvider"
             ]
         }
     }
