--- a/modules/external-dependencies-package/composer.json
+++ b/modules/external-dependencies-package/composer.json
@@ -24,7 +24,7 @@
         "barryvdh/laravel-dompdf": "^0.8",
         "beyondcode/laravel-websockets": "^1.4",
         "pusher/pusher-php-server": "^4.1",
-        "spatie/laravel-activitylog": "^3.17"
+        "spatie/laravel-activitylog": "*"
     },
     "require-dev": {
     },
