--- a/.env.example
+++ b/.env.example
@@ -65,3 +65,5 @@ WORDPRESS_PLUGIN_URL=http://163.172.106.97:8111
 HTTP_PROXY=
 HTTPS_PROXY=
 NO_PROXY=
+
+URL_FORGOT_PASSWORD_CLIENT=http://163.172.106.97:3011/forgot-password
