--- a/modules/services-package/composer.json
+++ b/modules/services-package/composer.json
@@ -22,7 +22,10 @@
         "psr-4": {
             "Satis2020\\ServicePackage\\": "src/",
             "Satis2020\\ServicePackage\\Database\\Seeds\\": "database/seeds/"
-        }
+        },
+        "files": [
+            "src/Helpers/Helpers.php"
+        ]
     },
     "extra": {
         "laravel": {
