--- a/composer.json
+++ b/composer.json
@@ -98,7 +98,8 @@
     "satis2020/useful-data-plugin-wordpress": "^1.0",
     "satis2020/users-package": "^1.0",
     "satis2020/without-link-with-institution-unit": "^1.0",
-    "satis2020/system-usage-report": "^1.0"
+    "satis2020/system-usage-report": "^1.0",
+    "satis2020/benchmarking-report": "^1.0"
   },
   "require-dev": {
     "facade/ignition": "^2.0",
@@ -744,6 +745,13 @@
     {
       "type": "path",
       "url": "modules/system-usage-report/",
+      "options": {
+        "symlink": true
+      }
+    },
+    {
+      "type": "path",
+      "url": "modules/benchmarking-report/",
       "options": {
         "symlink": true
       }
