--- a/modules/benchmarking-report/composer.json
+++ b/modules/benchmarking-report/composer.json
@@ -6,7 +6,7 @@
     "autoload": {
         "psr-4": {
             "Satis2020\\BenchmarkingReport\\": "src/",
-            "Satis2020\\SystemUsageReport\\Database\\Seeds\\": "database/seeds/"
+            "Satis2020\\BenchmarkingReport\\Database\\Seeds\\": "database/seeds/"
         }
     },
     "authors": [
