--- a/composer.json
+++ b/composer.json
@@ -97,7 +97,11 @@
     "satis2020/useful-data-for-backoffice": "^1.0",
     "satis2020/useful-data-plugin-wordpress": "^1.0",
     "satis2020/users-package": "^1.0",
-    "satis2020/without-link-with-institution-unit": "^1.0"
+    "satis2020/without-link-with-institution-unit": "^1.0",
+    "satis2020/system-usage-report": "^1.0",
+    "satis2020/benchmarking-report": "^1.0",
+    "satis2020/system-efficiency-report-my-institution": "^1.0",
+    "satis2020/global-report": "^1.0"
   },
   "require-dev": {
     "facade/ignition": "^2.0",
@@ -739,7 +743,34 @@
       "options": {
         "symlink": true
       }
+    },
+    {
+      "type": "path",
+      "url": "modules/system-usage-report/",
+      "options": {
+        "symlink": true
+      }
+    },
+    {
+      "type": "path",
+      "url": "modules/benchmarking-report/",
+      "options": {
+        "symlink": true
+      }
+    },
+    {
+      "type": "path",
+      "url": "modules/system-efficiency-report-my-institution/",
+      "options": {
+        "symlink": true
+      }
+    },
+    {
+      "type": "path",
+      "url": "modules/global-report/",
+      "options": {
+        "symlink": true
+      }
     }
-
   ]
 }
