--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
     "guzzlehttp/guzzle": "^6.3",
     "laravel/framework": "^7.0",
     "laravel/tinker": "^2.0",
+    "satis/countries-package": "^1.0",
     "satis2020/account-type": "^1.0",
     "satis2020/active-pilot": "^1.0",
     "satis2020/activity-log": "^1.0",
@@ -28,6 +29,7 @@
     "satis2020/any-user": "^1.0",
     "satis2020/attach-files-to-claim": "^1.0",
     "satis2020/auth-config": "^1.0",
+    "satis2020/benchmarking-report": "^1.0",
     "satis2020/category-client": "^1.0",
     "satis2020/channel": "^1.0",
     "satis2020/claim-awaiting-assignment": "^1.0",
@@ -44,6 +46,7 @@
     "satis2020/dashboard": "^1.0",
     "satis2020/discussion": "^1.0",
     "satis2020/faq": "^1.0",
+    "satis2020/global-report": "^1.0",
     "satis2020/institution": "^1.0",
     "satis2020/message-api": "^1.0",
     "satis2020/metadata-package": "^1.0",
@@ -84,6 +87,8 @@
     "satis2020/staff-from-maybe-no-unit": "^1.0",
     "satis2020/staff-from-my-unit": "^1.0",
     "satis2020/staff-history": "^1.0",
+    "satis2020/system-efficiency-report-my-institution": "^1.0",
+    "satis2020/system-usage-report": "^1.0",
     "satis2020/transfer-claim-to-circuit-unit": "^1.0",
     "satis2020/transfer-claim-to-targeted-institution": "^1.0",
     "satis2020/transfer-claim-to-unit": "^1.0",
@@ -97,11 +102,7 @@
     "satis2020/useful-data-for-backoffice": "^1.0",
     "satis2020/useful-data-plugin-wordpress": "^1.0",
     "satis2020/users-package": "^1.0",
-    "satis2020/without-link-with-institution-unit": "^1.0",
-    "satis2020/system-usage-report": "^1.0",
-    "satis2020/benchmarking-report": "^1.0",
-    "satis2020/system-efficiency-report-my-institution": "^1.0",
-    "satis2020/global-report": "^1.0"
+    "satis2020/without-link-with-institution-unit": "^1.0"
   },
   "require-dev": {
     "facade/ignition": "^2.0",
@@ -768,6 +769,13 @@
     {
       "type": "path",
       "url": "modules/global-report/",
+      "options": {
+        "symlink": true
+      }
+    },
+    {
+      "type": "path",
+      "url": "../satis-countries-package/",
       "options": {
         "symlink": true
       }
