--- a/composer.json
+++ b/composer.json
@@ -101,7 +101,8 @@
     "satis2020/system-usage-report": "^1.0",
     "satis2020/benchmarking-report": "^1.0",
     "satis2020/system-efficiency-report-my-institution": "^1.0",
-    "satis2020/global-report": "^1.0"
+    "satis2020/global-report": "^1.0",
+    "satis2020/my-staff-monitoring": "^1.0"
   },
   "require-dev": {
     "facade/ignition": "^2.0",
@@ -768,6 +769,13 @@
     {
       "type": "path",
       "url": "modules/global-report/",
+      "options": {
+        "symlink": true
+      }
+    },
+    {
+      "type": "path",
+      "url": "modules/my-staff-monitoring/",
       "options": {
         "symlink": true
       }
