--- a/modules/external-dependencies-package/composer.json
+++ b/modules/external-dependencies-package/composer.json
@@ -25,8 +25,7 @@
         "beyondcode/laravel-websockets": "^1.4",
         "pusher/pusher-php-server": "^4.1",
         "nategood/httpful": "*",
-        "spatie/laravel-activitylog": "*",
-        "satis2020/countries-package": "1.0.0"
+        "spatie/laravel-activitylog": "*"
     },
     "require-dev": {
     },
