--- a/composer.json
+++ b/composer.json
@@ -102,16 +102,9 @@
     "satis2020/useful-data-plugin-wordpress": "^1.0",
     "satis2020/users-package": "^1.0",
     "satis2020/without-link-with-institution-unit": "^1.0",
-<<<<<<< HEAD
-    "satis2020/system-usage-report": "^1.0",
-    "satis2020/benchmarking-report": "^1.0",
-    "satis2020/system-efficiency-report-my-institution": "^1.0",
-    "satis2020/global-report": "^1.0",
-    "ext-curl": "*"
-=======
+    "ext-curl": "*",
     "satis2020/my-staff-monitoring": "^1.0",
     "satis2020/countries-package": "dev-main"
->>>>>>> 9ad9588db680977b5c1447914351207350c84b81
   },
   "require-dev": {
     "facade/ignition": "^2.0",
