--- a/composer.json
+++ b/composer.json
@@ -103,7 +103,8 @@
     "satis2020/users-package": "^1.0",
     "satis2020/without-link-with-institution-unit": "^1.0",
     "ext-curl": "*",
-    "satis2020/countries-package": "dev-main"
+    "satis2020/countries-package": "dev-main",
+    "satis2020/escalation": "1.0.0"
   },
   "require-dev": {
     "facade/ignition": "^2.0",
@@ -770,6 +771,13 @@
     {
       "type": "path",
       "url": "modules/global-report/",
+      "options": {
+        "symlink": true
+      }
+    },
+    {
+      "type": "path",
+      "url": "modules/escalation/",
       "options": {
         "symlink": true
       }
