--- a/composer.json
+++ b/composer.json
@@ -102,7 +102,8 @@
     "satis2020/benchmarking-report": "^1.0",
     "satis2020/system-efficiency-report-my-institution": "^1.0",
     "satis2020/global-report": "^1.0",
-    "ext-curl": "*"
+    "ext-curl": "*",
+    "satis2020/countries-package": "dev-main"
   },
   "require-dev": {
     "facade/ignition": "^2.0",
@@ -772,6 +773,10 @@
       "options": {
         "symlink": true
       }
+    },
+    {
+      "type": "vcs",
+      "url":  "https://github.com/FathDMD/satis2020-countries-package"
     }
   ]
 }
