--- a/composer.json
+++ b/composer.json
@@ -104,7 +104,8 @@
     "satis2020/without-link-with-institution-unit": "^1.0",
     "ext-curl": "*",
     "satis2020/countries-package": "dev-main",
-    "satis2020/escalation": "1.0.0"
+    "satis2020/escalation": "1.0.0",
+    "satis2020/my-staff-monitoring": "1.0.0"
 
   },
   "require-dev": {
@@ -772,6 +773,13 @@
     {
       "type": "path",
       "url": "modules/global-report/",
+      "options": {
+        "symlink": true
+      }
+    },
+    {
+      "type": "path",
+      "url": "modules/my-staff-monitoring/",
       "options": {
         "symlink": true
       }
