--- a/modules/useful-data-for-backoffice/composer.json
+++ b/modules/useful-data-for-backoffice/composer.json
@@ -27,7 +27,7 @@
   "extra": {
     "laravel": {
       "providers": [
-        "Satis2020\\UsefulDataForBackoffice\\Providers\\UsefulDataForBackofficeServiceProvider"
+        "UsefulDataForClaimsClassificationServiceProvider"
       ]
     }
   }
