--- a/composer.json
+++ b/composer.json
@@ -105,7 +105,8 @@
     "ext-curl": "*",
     "satis2020/countries-package": "dev-main",
     "satis2020/escalation": "1.0.0",
-    "satis2020/my-staff-monitoring": "1.0.0"
+    "satis2020/my-staff-monitoring": "1.0.0",
+    "satis2020/useful-data-for-claims-classification": "1.0.0"
 
   },
   "require-dev": {
@@ -794,6 +795,13 @@
     {
       "type": "vcs",
       "url":  "https://github.com/FathDMD/satis2020-countries-package"
+    },
+    {
+      "type": "path",
+      "url": "modules/useful-data-for-claims-classification/",
+      "options": {
+        "symlink": true
+      }
     }
   ]
 }
