--- a/composer.json
+++ b/composer.json
@@ -95,7 +95,8 @@
     "satis2020/useful-data-plugin-wordpress": "^1.0",
     "satis2020/users-package": "^1.0",
     "satis2020/without-link-with-institution-unit": "^1.0",
-    "satis2020/notification-proof": "^1.0"
+    "satis2020/notification-proof": "^1.0",
+    "satis2020/bci-reports": "^1.0"
   },
   "require-dev": {
     "facade/ignition": "^2.0",
@@ -720,6 +721,13 @@
     {
       "type": "path",
       "url": "modules/notification-proof/",
+      "options": {
+        "symlink": true
+      }
+    },
+    {
+      "type": "path",
+      "url": "modules/bci-reports/",
       "options": {
         "symlink": true
       }
