config logs to be stored in db

--- a/.env.example
+++ b/.env.example
@@ -64,3 +64,8 @@ WORDPRESS_PLUGIN_URL=http://163.172.106.97:8111
 HTTP_PROXY=
 HTTPS_PROXY=
 NO_PROXY=
+
+LOG_DB_COLLECTION=logs
+LOG_DB_MAX_HOURS=24*7
+LOG_DB_MAX_COUNT=3
+
