--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     "php": "^7.2.5",
     "ext-fileinfo": "*",
     "ext-json": "*",
+    "danielme85/laravel-log-to-db": "^3.0",
     "doctrine/dbal": "^2.10",
     "fideloper/proxy": "^4.2",
     "fruitcake/laravel-cors": "^1.0",
@@ -26,6 +27,7 @@
     "satis2020/any-institution-unit": "^1.0",
     "satis2020/any-user": "^1.0",
     "satis2020/attach-files-to-claim": "^1.0",
+    "satis2020/bci-reports": "^1.0",
     "satis2020/category-client": "^1.0",
     "satis2020/channel": "^1.0",
     "satis2020/claim-awaiting-assignment": "^1.0",
@@ -53,8 +55,10 @@
     "satis2020/my-institution": "^1.0",
     "satis2020/my-institution-type-role": "^1.0",
     "satis2020/my-institution-unit": "^1.0",
+    "satis2020/my-staff-monitoring": "1.0.0",
     "satis2020/my-user": "^1.0",
     "satis2020/notification": "^1.0",
+    "satis2020/notification-proof": "^1.0",
     "satis2020/performance-indicator-package": "^1.0",
     "satis2020/position": "^1.0",
     "satis2020/processing-circuit-any-institution": "^1.0",
@@ -94,11 +98,8 @@
     "satis2020/useful-data-for-backoffice": "^1.0",
     "satis2020/useful-data-plugin-wordpress": "^1.0",
     "satis2020/users-package": "^1.0",
-    "satis2020/without-link-with-institution-unit": "^1.0",
-    "satis2020/notification-proof": "^1.0",
-    "satis2020/bci-reports": "^1.0",
     "satis2020/webhooks": "^1.0",
-    "satis2020/my-staff-monitoring": "1.0.0"
+    "satis2020/without-link-with-institution-unit": "^1.0"
   },
   "require-dev": {
     "facade/ignition": "^2.0",
