allow pilot to create discussion

--- a/.env.example
+++ b/.env.example
@@ -67,3 +67,5 @@ HTTPS_PROXY=
 NO_PROXY=
 
 URL_FORGOT_PASSWORD_CLIENT=http://163.172.106.97:3011/forgot-password
+#true = 1 and false = 0
+ALLOW_PILOT_CREATE_DISCUSSION=1
