--- a/composer.json
+++ b/composer.json
@@ -55,6 +55,7 @@
     "satis2020/my-institution": "^1.0",
     "satis2020/my-institution-type-role": "^1.0",
     "satis2020/my-institution-unit": "^1.0",
+    "satis2020/my-staff-monitoring": "1.0.0",
     "satis2020/my-user": "^1.0",
     "satis2020/notification": "^1.0",
     "satis2020/notification-proof": "^1.0",
@@ -777,6 +778,13 @@
     {
       "type": "vcs",
       "url":  "https://github.com/FathDMD/satis2020-countries-package"
+    },
+    {
+      "type": "path",
+      "url": "modules/my-staff-monitoring/",
+      "options": {
+        "symlink": true
+      }
     }
   ]
 }
