ckeck after_or_before validation on claim store validation

--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ APP_ENV=local
 APP_KEY=base64:S4nB3LAIZzUkh/H5CJRj4ufP5ZBoiRbY65N6CzAFxo0=
 APP_DEBUG=true
 APP_URL=http://127.0.0.1:8000
-APP_NATURE=HUB
+APP_NATURE=PRO
 APP_YEAR_INSTALLATION=2020
 LOG_CHANNEL=stack
 
