--- a/.env.example
+++ b/.env.example
@@ -72,4 +72,4 @@ LOG_DB_MAX_COUNT=3
 
 URL_FORGOT_PASSWORD_CLIENT=http://163.172.106.97:3011/forgot-password
 #true = 1 and false = 0
-ALLOW_PILOT_CREATE_DISCUSSION=1
+#ALLOW_PILOT_CREATE_DISCUSSION=1
