claim authomatisation update

--- a/.env.example
+++ b/.env.example
@@ -61,6 +61,7 @@ FRONTEND_URL=http://163.172.106.97:3011
 MOBILE_BACKOFFICE_URL=http://163.172.106.97:8022
 MAIL_SERVICE_URL=http://163.172.106.97:8010
 WORDPRESS_PLUGIN_URL=http://163.172.106.97:8111
+CLAIM_OBJECT_PREDICTION=http://163.172.106.97:5005/predict
 
 HTTP_PROXY=
 HTTPS_PROXY=
