--- a/.env.example
+++ b/.env.example
@@ -62,6 +62,8 @@ MOBILE_BACKOFFICE_URL=http://163.172.106.97:8022
 MAIL_SERVICE_URL=http://163.172.106.97:8010
 WORDPRESS_PLUGIN_URL=http://163.172.106.97:8111
 CLAIM_OBJECT_PREDICTION=http://163.172.106.97:5005/predict
+CLAIM_UNIT_PREDICTION=http://163.172.106.97:5006/predict
+
 
 HTTP_PROXY=
 HTTPS_PROXY=
