--- a/.env.example
+++ b/.env.example
@@ -63,6 +63,7 @@ MAIL_SERVICE_URL=http://163.172.106.97:8010
 WORDPRESS_PLUGIN_URL=http://163.172.106.97:8111
 CLAIM_OBJECT_PREDICTION=http://163.172.106.97:5005/predict
 CLAIM_UNIT_PREDICTION=http://163.172.106.97:5006/predict
+SCAN_FILE_CLAIM_PREDICTION=http://212.83.146.159:5552/extract
 
 
 HTTP_PROXY=
