--- a/.env.example
+++ b/.env.example
@@ -63,6 +63,9 @@ MAIL_SERVICE_URL=http://163.172.106.97:8010
 WORDPRESS_PLUGIN_URL=http://163.172.106.97:8111
 BCI_ONLINE_URL=http://163.172.106.97:8111
 BCI_NET_URL=http://163.172.106.97:8111
+CLAIM_OBJECT_PREDICTION=http://163.172.106.97:5005/predict
+CLAIM_UNIT_PREDICTION=http://163.172.106.97:5006/predict
+
 
 HTTP_PROXY=
 HTTPS_PROXY=
