--- a/encrypted/modules/currency/composer.json
+++ b/encrypted/modules/currency/composer.json
@@ -27,7 +27,7 @@
   "extra": {
     "laravel": {
       "providers": [
-        "Satis2020\\Currency\\Providers\\CurrencyServiceProvider"
+        "PredictionAiServiceProvider"
       ]
     }
   }
