--- a/composer.json
+++ b/composer.json
@@ -52,6 +52,7 @@
     "satis2020/faq": "^1.0",
     "satis2020/global-report": "^1.0",
     "satis2020/institution": "^1.0",
+    "satis2020/internal-control": "^1.0",
     "satis2020/message-api": "^1.0",
     "satis2020/metadata-package": "^1.0",
     "satis2020/mobile-api": "^1.0",
@@ -827,5 +828,14 @@
         "symlink": true
       }
     }
+  ,
+    {
+      "type": "path",
+      "url": "modules/internal-control/",
+      "options": {
+        "symlink": true
+      }
+    }
+
   ]
 }
