--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
   ],
   "license": "MIT",
   "require": {
-    "php": "^7.2.5",
+    "php": "^7.2.5|^7.4",
     "ext-curl": "*",
     "ext-fileinfo": "*",
     "ext-json": "*",
